<resources>
    <string name="app_name">MobileAppMidterm</string>
    <string name="let_s_roll_some_die">Let\'s Roll Some Die!</string>
    <string name="lets_roll">Let\'s Roll!</string>
    <string name="add">Add $$</string>
    <string name="welcome">Welcome!</string>
    <string name="dice_game">Dice Game</string>
    <string name="start">Start</string>
    <string name="welcome_to_dice_roll">Welcome to Dice Roll</string>
    <string name="welcome1">Welcome to Dice Roll :)</string>
    <string name="click_the_button_to_roll_the_dice_good_luck">Click the button to roll the dice: good luck!</string>
    <string name="roll_dice">Roll Dice!</string>
</resources>